Add some more information about type theory

--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -52,4 +52,10 @@
   address   = {Cambridge, MA},
 }
 
+@Misc{typed-racket,
+  author       = {Tobin-Hochstadt, Sam and St-Amour, Vincent and Dobson, Eric and Takikawa, Asumu},
+  title        = {The {T}yped {R}acket guide},
+  howpublished = {\url{https://docs.racket-lang.org/ts-guide/}},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
