--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -13,9 +13,9 @@
 
 \bibliographystyle{acm}
 
-\title{CS399 Thesis Draft 1}
+\title{The Ergonomics of Faceted Execution (full draft)}
 \author{Ian Fisher}
-\date{25 February 2019}
+\date{25 March 2019}
 
 \begin{document}
 \maketitle
@@ -174,13 +174,12 @@ The following procedure observes the entire list of grades into a regular Racket
 
 It takes in a list of grades, a list of policies which should correspond index-by-index to the list of grades (remember that \texttt{obs} requires the policy to match the facet's policy), and an argument to pass to the policy predicates.
 
-\subsubsection{Efficiency of faceted execution}
+\section{Abstract interpretation}
 A practical problem of implementing faceted execution is that it can have high runtime cost. As the example with \textit{square-root} above indicates, functions applied to facets must be evaluated twice, once with the high-confidentiality value and once with the low-confidentiality value. The double evaluation imposes a significant runtime cost on faceted execution (as well as complicating the use of functions with side-effects). This cost can be mitigated to some extent by static analysis with an abstract interpreter. If the static analyzer can prove that a facet passed to a function only ever evaluates to its high-confidentiality value, then the evaluation of the function with the low-confidentiality value could be skipped, and significant performance gains could be realized.
 
-\subsection{Abstract interpretation}
 One technique for static analysis is abstract interpretation, wherein the computation of a program is modelled with abstract objects (e.g., the abstract ``negative number'' instead of the concrete $-10$) so that real properties of the program can be reasoned about \cite{ai-original}. Abstract interpreters can be derived mechanically from abstract machines, provided that the formalism for the abstract machine is expressed in an amenable manner \cite{aam}. An abstract interpreter of a \textsc{Racets}-like language is under development for this purpose \cite{abstract-inter}.
 
-\subsection{Type theory}
+\section{Type theory}
 As the example \textsc{Racets} programs presented above indicated, programmers must be careful to apply the correct policies when they observe faceted values. As the \textsc{Racets} language is dynamically typed, errors in the use of faceted execution are not caught until runtime. A static type system for faceted values would be able to more reliably catch programmer errors.
 
 The definition of a type system is ``a tractable syntactic method for proving the absence of certain program behaviors by classifying phrases according to the kinds of values they compute'' \cite{types}. The program behaviors that a type system are meant to prevent are generally what are called type errors: operations on values for which the operation is not defined.
@@ -233,6 +232,13 @@ The three inference rules presented above can be applied to any expression in th
 
 Type systems for real programming languages are significantly more complex, but involve the same basic formalism of inference rules and type judgments.
 
+\section{Implementing Racets as a \texttt{\#lang} language}
+TODO
+
+\section{Conclusion}
+TODO
+
+\begin{comment}
 \section{Research plan}
 My research will proceed in two directions: abstract interpretation and type theory. On the abstract interpretation side of things, it will involve writing several substantial example programs that use faceted execution, for example a grade server in which professors, teacher's assistants, and students all have different levels of access to the grade data, protected by facets. Once I have written these programs in \textsc{Racets}, I will translate them into the language of the abstract interpreter, and assess what conclusions it is able to draw about them, and to what level of precision. For example, if a certain function is sometimes applied to faceted values and sometimes applied to regular values, the abstract interpreter may or may not be able to identify the call sites that require special handling of the faceted execution, and those that can be run normally. In general, the more fine-grained the conclusions the abstract interpreter can draw, the greater the improvement of performance time.
 
@@ -241,6 +247,8 @@ The other part of my research will consist in writing a formal type system for t
 \textsc{Racets} is a dynamically-typed language (as is its base language, Racket), so any type system that I develop would take the form of a mathematical formalism rather than a concrete implementation, though an actual implementation of it would be possible using Typed Racket, a statically typed variant of Racket \cite{typed-racket}.
 
 My research will aid in understanding the efficacy of static analysis and type theory as applied to faceted execution, and thus contribute to improving the programming-language resources that software developers have available to correctly and reliably enforce privacy policies.
+
+\end{comment}
 
 \bibliography{thesis}
 
