Add abstract and begin working on syntactic macros section

--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -58,4 +58,12 @@
   howpublished = {\url{https://docs.racket-lang.org/ts-guide/}},
 }
 
+@Misc{fear-of-macros,
+  author       = {Greg Hendershott},
+  title        = {Fear of macros},
+  howpublished = {\url{https://www.greghendershott.com/fear-of-macros/all.html}},
+  month        = jun,
+  year         = {2018},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
