--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -66,4 +66,9 @@
   year         = {2018},
 }
 
+@Misc{fe-racket,
+  title        = {The {R}acket reference: fully expanded programs},
+  howpublished = {\url{https://docs.racket-lang.org/reference/syntax-model.html#(part._fully-expanded)}},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
